{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 26,
  "lineage": "fb85009e-5488-4f07-be15-f7425978bd46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0156001f0548e90b1",
            "arn": "arn:aws:ec2:us-east-1:643842898491:instance/i-0e8dbd79f94c82d05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8dbd79f94c82d05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01116c596af5bf85b"
              }
            ],
            "primary_network_interface_id": "eni-01116c596af5bf85b",
            "private_dns": "ip-10-0-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-18-207-99-170.compute-1.amazonaws.com",
            "public_ip": "18.207.99.170",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfcdb3dc65f40464",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d4685f731b47907",
            "tags": {
              "Name": "EC2-microservices",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "EC2-microservices",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-092f9585a3d27d485"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "643842898491",
            "id": "i-0e8dbd79f94c82d05",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643842898491:internet-gateway/igw-0c74c8736b695ebb2",
            "id": "igw-0c74c8736b695ebb2",
            "owner_id": "643842898491",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW-ecommerce",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "IGW-ecommerce",
              "Project": "ecommerce-microservices-free-tier"
            },
            "vpc_id": "vpc-0734fce758c1d46e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643842898491:route-table/rtb-05c88890e1bc9a522",
            "id": "rtb-05c88890e1bc9a522",
            "owner_id": "643842898491",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c74c8736b695ebb2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-public",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "RT-public",
              "Project": "ecommerce-microservices-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0734fce758c1d46e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "643842898491",
            "id": "rtb-05c88890e1bc9a522",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fd4678397043fb2",
            "region": "us-east-1",
            "route_table_id": "rtb-05c88890e1bc9a522",
            "subnet_id": "subnet-02d4685f731b47907"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643842898491:security-group/sg-092f9585a3d27d485",
            "description": "Security group for app instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092f9585a3d27d485",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "643842898491",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "app-sg",
              "Project": "ecommerce-microservices-free-tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0734fce758c1d46e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "643842898491",
            "id": "sg-092f9585a3d27d485",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643842898491:subnet/subnet-02d4685f731b47907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d4685f731b47907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "643842898491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public Subnet",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "Public Subnet",
              "Project": "ecommerce-microservices-free-tier"
            },
            "vpc_id": "vpc-0734fce758c1d46e9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "643842898491",
            "id": "subnet-02d4685f731b47907",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:643842898491:vpc/vpc-0734fce758c1d46e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-075f0ab538060e386",
            "default_route_table_id": "rtb-072b22e2c2e841aa6",
            "default_security_group_id": "sg-022c7464e54e07fe9",
            "dhcp_options_id": "dopt-0452d08a7f9845a1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0734fce758c1d46e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072b22e2c2e841aa6",
            "owner_id": "643842898491",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-ecommerce",
              "Project": "ecommerce-microservices-free-tier"
            },
            "tags_all": {
              "Name": "VPC-ecommerce",
              "Project": "ecommerce-microservices-free-tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "643842898491",
            "id": "vpc-0734fce758c1d46e9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}